Fix station list overflow on smaller screens

--- a/src/components/styles/GasStationData.css
+++ b/src/components/styles/GasStationData.css
@@ -6,6 +6,8 @@
 .StationListContainer {
     margin: 3vw;
     white-space: pre;
+    height: 80vh;
+    overflow: scroll;
 }
 
 .StationList {
